videodl works on linux and windows now